# Modified-Souffle2.1

./: .clang-format  .clang-tidy  .codecov.yml  .gitignore  CMakeLists.txt  README.md  doxygen.in
src/: .gitignore  AggregateOp.h  CMakeLists.txt  FunctorOps.cpp  FunctorOps.h  Global.cpp  Global.h  GraphUtils.h  LogStatement.h  RelationTag.h  main.cpp  souffle-compile.in  souffle_prof.cpp
src/ast/: Aggregator.cpp  Aggregator.h  AlgebraicDataType.cpp  AlgebraicDataType.h  Argument.h  Atom.cpp  Atom.h  Attribute.cpp  Attribute.h  BinaryConstraint.cpp  BinaryConstraint.h  BooleanConstraint.cpp  BooleanConstraint.h  BranchDeclaration.cpp  BranchDeclaration.h  BranchInit.cpp  BranchInit.h  Clause.cpp  Clause.h  Component.cpp  Component.h  ComponentInit.cpp  ComponentInit.h  ComponentType.cpp  ComponentType.h  Constant.cpp  Constant.h  Constraint.h  Counter.cpp  Counter.h  Directive.cpp  Directive.h  ExecutionOrder.cpp  ExecutionOrder.h  ExecutionPlan.cpp  ExecutionPlan.h  FunctionalConstraint.cpp  FunctionalConstraint.h  Functor.h  FunctorDeclaration.cpp  (+44 more)
src/ast/analysis/: Aggregate.cpp  Aggregate.h  Analysis.h  ClauseNormalisation.cpp  ClauseNormalisation.h  ComponentLookup.cpp  ComponentLookup.h  Constraint.h  ConstraintSystem.h  Functor.cpp  Functor.h  Ground.cpp  Ground.h  IOType.cpp  IOType.h  PolymorphicObjects.cpp  PolymorphicObjects.h  PrecedenceGraph.cpp  PrecedenceGraph.h  ProfileUse.cpp  ProfileUse.h  RecursiveClauses.cpp  RecursiveClauses.h  RedundantRelations.cpp  RedundantRelations.h  RelationDetailCache.cpp  RelationDetailCache.h  RelationSchedule.cpp  RelationSchedule.h  SCCGraph.cpp  SCCGraph.h  SumTypeBranches.cpp  SumTypeBranches.h  TopologicallySortedSCCGraph.cpp  TopologicallySortedSCCGraph.h  Type.cpp  Type.h  TypeConstraints.cpp  TypeConstraints.h  TypeEnvironment.cpp  (+3 more)
src/ast/tests/: CMakeLists.txt  ast_parser_utils_test.cpp  ast_print_test.cpp  ast_program_test.cpp  ast_transformers_test.cpp  ast_utils_test.cpp  constraints_test.cpp  type_system_test.cpp
src/ast/transform/: AddNullariesToAtomlessAggregates.cpp  AddNullariesToAtomlessAggregates.h  ComponentChecker.cpp  ComponentChecker.h  ComponentInstantiation.cpp  ComponentInstantiation.h  Conditional.h  DebugReporter.cpp  DebugReporter.h  ExecutionPlanChecker.cpp  ExecutionPlanChecker.h  ExpandEqrels.cpp  ExpandEqrels.h  Fixpoint.h  FoldAnonymousRecords.cpp  FoldAnonymousRecords.h  GroundWitnesses.cpp  GroundWitnesses.h  GroundedTermsChecker.cpp  GroundedTermsChecker.h  IOAttributes.h  IODefaults.h  InlineRelations.cpp  InlineRelations.h  MagicSet.cpp  MagicSet.h  MaterializeAggregationQueries.cpp  MaterializeAggregationQueries.h  MaterializeSingletonAggregation.cpp  MaterializeSingletonAggregation.h  Meta.cpp  Meta.h  MinimiseProgram.cpp  MinimiseProgram.h  NameUnnamedVariables.cpp  NameUnnamedVariables.h  NormaliseGenerators.cpp  NormaliseGenerators.h  Null.h  PartitionBodyLiterals.cpp  (+35 more)
src/ast/utility/: BindingStore.cpp  BindingStore.h  LambdaNodeMapper.h  NodeMapper.h  SipsMetric.cpp  SipsMetric.h  Utils.cpp  Utils.h  Visitor.h
src/ast2ram/: ClauseTranslator.h  ConstraintTranslator.h  TranslationStrategy.h  UnitTranslator.h  ValueTranslator.h
src/ast2ram/provenance/: ClauseTranslator.cpp  ClauseTranslator.h  ConstraintTranslator.cpp  ConstraintTranslator.h  SubproofGenerator.cpp  SubproofGenerator.h  TranslationStrategy.cpp  TranslationStrategy.h  UnitTranslator.cpp  UnitTranslator.h
src/ast2ram/seminaive/: ClauseTranslator.cpp  ClauseTranslator.h  ConstraintTranslator.cpp  ConstraintTranslator.h  TranslationStrategy.cpp  TranslationStrategy.h  UnitTranslator.cpp  UnitTranslator.h  ValueTranslator.cpp  ValueTranslator.h
src/ast2ram/utility/: Location.h  TranslatorContext.cpp  TranslatorContext.h  Utils.cpp  Utils.h  ValueIndex.cpp  ValueIndex.h
src/include/souffle/: CompiledOptions.h  Modify.h
src/interpreter/: BTreeIndex.cpp  BrieIndex.cpp  Context.h  Engine.cpp  Engine.h  EqrelIndex.cpp  Generator.cpp  Generator.h  Index.h  Modify.cpp  Modify.h  Node.h  ProgInterface.h  ProvenanceIndex.cpp  Relation.h  Util.h  ViewContext.h
src/interpreter/tests/: CMakeLists.txt  interpreter_relation_test.cpp  ram_arithmetic_test.cpp  ram_relation_test.cpp
src/parser/: Helper.h  ParserDriver.cpp  ParserDriver.h  ParserUtils.cpp  ParserUtils.h  SrcLocation.cpp  SrcLocation.h  parser.yy  scanner.ll
src/ram/: AbstractAggregate.h  AbstractConditional.h  AbstractExistenceCheck.h  AbstractIfExists.h  AbstractLog.h  AbstractOperator.h  AbstractParallel.h  Aggregate.h  AutoIncrement.h  BinRelationStatement.h  Break.h  Call.h  Clear.h  Condition.h  Conjunction.h  Constraint.h  DebugInfo.h  EmptinessCheck.h  ExistenceCheck.h  Exit.h  Expression.h  Extend.h  False.h  Filter.h  FloatConstant.h  GuardedInsert.h  IO.h  IfExists.h  IndexAggregate.h  IndexIfExists.h  IndexOperation.h  IndexScan.h  Insert.h  IntrinsicOperator.h  ListStatement.h  LogRelationTimer.h  LogSize.h  LogTimer.h  Loop.h  Negation.h  (+37 more)
src/ram/analysis/: Analysis.h  Complexity.cpp  Complexity.h  Index.cpp  Index.h  Level.cpp  Level.h  Relation.cpp  Relation.h
src/ram/tests/: .gitignore  CMakeLists.txt  matching_test.cpp  max_matching_test.cpp  ram_relation_equal_clone_test.cpp  (+5 more)
src/reports/: DebugReport.cpp  DebugReport.h  ErrorReport.h
src/synthesiser/: Relation.cpp  Relation.h  Synthesiser.cpp  Synthesiser.h
src/tests/: CMakeLists.txt  binary_relation_test.cpp  brie_test.cpp  btree_multiset_test.cpp  btree_set_test.cpp  compiled_tuple_test.cpp  eqrel_datastructure_test.cpp  graph_utils_test.cpp  parallel_utils_test.cpp  profile_util_test.cpp  record_table_test.cpp  symbol_table_test.cpp  table_test.cpp  test.h  util_test.cpp
tests/: .gitignore  CMakeLists.txt  check-test-completion.sh  create-msvc-build-dir.sh  msvc-interface-functor-test.sh  msvc-interface-test.sh
tests/evaluation/: CMakeLists.txt
tests/example/: CMakeLists.txt
tests/interface/: CMakeLists.txt
tests/profile/: CMakeLists.txt
tests/provenance/: CMakeLists.txt
tests/semantic/: CMakeLists.txt
tests/swig/: CMakeLists.txt
tests/syntactic/: CMakeLists.txt
(+760 files in other folders)
